# LayupDefinition

./: .buildinfo  .bumpversion.cfg  .gitignore  CompositeStandard.py  Developer Guide.html  Import.catvbs  InitExe.catvbs  Introduction.html  LD.kv  LD.yml  LD_UI.py  LD_UI5.py  LD_layup_database.json  LD_layup_database__.json  LD_layup_databasetxt  LD_utils.py  LD_versions_list.csv  Limitations.html  MixedMat.py  README.md  User Guide 4.0+.html  User Guide.html  Versions.html  WindowManager.kv  Work in progress.html  compostSchema.json  genindex.html  index.html  layup_CATimport.py  layup_CATimport.spec  layup_definition.py  layup_definition.spec  matDatGen.py  new_window.kv  objects.inv  pyproject.toml  sdc_kivy_3.yml  search.html  searchindex.js  secondary_UIs.py  (+6 more)
.github/workflows/: documentation.yml
_sources/: User Guide.rst.txt  User Interface.rst.txt  Versions.rst.txt
docs/source/: Developer Guide.rst  User Guide 3.0 and older.rst  User Guide.rst  Versions.rst  conf.py  index.rst
example_files/: LD_layup_database.json  LD_layup_database.txt  x_test_135_materials.csv  x_test_136.csv  x_test_136_layup.json  x_test_141.CATPart  x_test_141.csv  x_test_141_layup.json  x_test_141_layup_plus_axis.json  x_test_141_tols.json
verif_part/: Enter name here_report.txt  x_test_116.txt  x_test_32.CATPart  x_test_32.stp  x_test_32.txt  x_test_32_report.txt  x_test_33.CATPart  x_test_33.txt
