[project]
name = "LayupDefinition"
authors = [{name = "Jakub Kucera"}]
description = "Tool to define basic layup"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.5.0"

[project.urls]
Home = "https://github.com/National-Composites-Centre/LayupDefinition"
